--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,13 @@ language: cpp
 compiler:
   - gcc
 
+sudo: required
+dist: trusty
+
+before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get -y update
+  - sudo apt-get -y install g++-5
+
 script:
   - ./build.sh
